@@ -1,6 +1,10 @@
 # ChangeLog for www-apache/mod_memcached_cache
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  02 Jul 2013; Justin Lecher <jlec@gentoo.org>
+  mod_memcached_cache-0.1.0.ebuild, metadata.xml:
+  Bump to EAPI=5
 
   31 Mar 2011; Justin Lecher <jlec@gentoo.org>
   mod_memcached_cache-0.1.0.ebuild, +metadata.xml:
